# microsoft-entra-detection-lab

./: .gitattributes  .gitbook.yaml  .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pages.yml  validate.yml
docs/: DATA_SOURCES.md  DETECTION_CATALOG.md  GITBOOK_SETUP.md  README.md  RELEASE_CHECKLIST.md  REVIEWER_GUIDE.md  SUMMARY.md  TUNING_GUIDE.md  VALIDATION.md
docs/playbooks/: ENTRA-001_repeated_failed_signins_one_ip.md  ENTRA-002_failed_signins_multiple_users.md  ENTRA-003_mfa_denied_then_success.md  ENTRA-004_high_risk_signin_not_blocked.md  ENTRA-005_privileged_role_assignment.md  ENTRA-006_application_credential_added.md  README.md
reports/latest/: demo.html  report.html  report.md  validation-matrix.csv
rules/: entra_001_repeated_failed_signins_one_ip.yml  entra_002_failed_signins_multiple_users.yml  entra_003_mfa_denied_then_success.yml  entra_004_high_risk_signin_not_blocked.yml  entra_005_privileged_role_assignment.yml  entra_006_application_credential_added.yml  manifest.json
src/entralab/: __init__.py  audit.py  cli.py  demo.py  explain.py  oracle.py  paths.py  report.py  rules.py  validation.py
tests/: test_cli.py  test_demo.py  test_oracle.py  test_public_docs.py  test_reports.py  test_rules.py  test_security.py
tests/fixtures/: scenarios.json
