[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsoft-entra-detection-lab"
version = "0.1.0"
description = "A safe, reproducible detection engineering lab for Microsoft Entra ID sign-in and audit anomalies."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ruben Asua" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "detect-secrets>=1.5,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
entralab = "entralab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/entralab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/entralab/demo.py" = ["E501"]
"src/entralab/report.py" = ["E501"]
